Allow passing config through query params
