# static/openapi.yaml
@@ -137,6 +137,12 @@ paths:
           required: true
           schema:
             $ref: "#/components/schemas/HashStr"
+        - name: config
+          in: query
+          description: extra configuration to use (equivalent to command line configuration described in [EduLint's documentation](https://edulint.rtfd.io#configuration)).
+          required: false
+          schema:
+            $ref: "#/components/schemas/QueryConfig"
       responses:
         "200":
           description: successful operation
@@ -162,6 +168,12 @@ paths:
           schema:
             type: string
             example: latest
+        - name: config
+          in: query
+          description: extra configuration to use (equivalent to command line configuration described in [EduLint's documentation](https://edulint.rtfd.io#configuration)).
+          required: false
+          schema:
+            $ref: "#/components/schemas/QueryConfig"
       requestBody:
         description: the code to upload and analyze
         content:
@@ -267,3 +279,6 @@ components:
             $ref: "#/components/schemas/ConfigError"
         hash:
           $ref: "#/components/schemas/HashStr"
+    QueryConfig:
+      type: string
+      example: config-file=cs0
